- Add Google Calendar sync w/ timezone settings - fixed bug where I was getting threading errors - fixed a bug where windows would temporarily be on top of a desired window and couldn't be swapped back - fixed window positioning to open relative to parent - updated database to store calendar event IDs - added an update_database.py file in case the database needs to be updated (new col) - added automatic calendar sync for time sessions with google calendar - colour coded events - added timezone configuration and a settings window - updated gitignore to protect creds and tokens

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Python
 __pycache__/
+*.pyc
+*.pyo
 *.py[cod]
 *$py.class
 *.so
@@ -17,3 +19,13 @@ Thumbs.db
 # Database files (we'll create these later)
 *.db
 *.sqlite
+
+# Google OAuth creds
+credentials.json
+token.pickle
+
+# Personal config settings file
+tracker_settings.json
+
+# Database (personal data)
+time_tracker.db
